# lualike

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  flake.nix  vcpkg-configuration.json  vcpkg.json
lualike/: CMakeLists.txt  ast.cc  ast.ccm  ast.h  error.cc  error.h  interpreter.cc  interpreter.ccm  interpreter.cppm  interpreter.h  interpreter_test.cc  interpreter_test.cpp  lexer.cc  lexer.ccm  lexer.cppm  lexer.h  lexer_test.cc  lexer_test.cpp  lualike.cc  lualike.ccm  lualike.cppm  lualike.h  parser.ccm  parser.h  token.cc  token.ccm  token.cppm  token.h  value.cc  value.ccm  value.cppm  value.h  value_test.cc
lualike/tests/: ast_test.cc  error_test.cc  interpreter_test.cc  lexer_test.cc  parser_test.cc  value_test.cc
